reasource hub gaps and title fixing

--- a/src/pages/blog/blog.module.css
+++ b/src/pages/blog/blog.module.css
@@ -66,16 +66,20 @@
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   display: grid !important;
-
+  gap: 25px;
 }
+
 .Cards>div{
   max-width: 100%;
-  margin: 0px 15px 15px 15px;
   height: 100%;
 }
 .blogHeroContent h1{
   font-size: 1.5em;
-  margin-bottom: 20px 
+  margin-bottom: 20px;
+  font-family: 'Montserrat';
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
 }
 .blogHeroContent h2{
   font-size: 0.5em;
